parser.output
Grammar

    0 $accept: Program $end

    1 Program: Procedures

    2 Procedures: Procedures procedure_decleration
    3           | ε

    4 procedure_decleration: PROC ID PARENO parameter_list PARENC RETURN type procedure_block

    5 parameter_list: parameter_decl multi_type
    6               | ε

    7 multi_type: SEMI parameter_decl multi_type
    8           | ε

    9 parameter_decl: id_list COLON non_str_type

   10 id_list: ID COMMA id_list
   11        | ID

   12 non_str_type: BOOL
   13             | CHAR
   14             | INT
   15             | CHARPTR
   16             | INTPTR

   17 type: non_str_type
   18     | string

   19 procedure_block: BRACKO proc_list decl_list stat_list return_stmt BRACKC

   20 proc_list: procedure_decleration proc_list
   21          | ε

   22 return_stmt: RETURN expression SEMI

   23 variable_decleration: VAR id_list COLON type SEMI

   24 string: STR SBRACKO INT_VAL SBRACKC

   25 str_id_lhs: ID SBRACKO expression SBRACKC

   26 str_id_expr: ID SBRACKO expression SBRACKC

   27 statement: assignment
   28          | assignment_val IS ID PARENO expr_list PARENC SEMI
   29          | IF PARENO expression PARENC BRACKO code_block BRACKC
   30          | IF PARENO expression PARENC BRACKO code_block BRACKC ELSE BRACKO code_block BRACKC
   31          | WHILE PARENO expression PARENC BRACKO code_block BRACKC
   32          | BRACKO code_block BRACKC

   33 assignment: assignment_val IS expression SEMI
   34           | assignment_val IS STRING_VAL SEMI

   35 assignment_val: ID
   36               | str_id_lhs
   37               | DEREF ID

   38 expr_list: expression multi_expr
   39          | ε

   40 multi_expr: COMMA expression multi_expr
   41           | ε

   42 primary_expression: PARENO expression PARENC
   43                   | ABS expression ABS
   44                   | ID
   45                   | str_id_expr
   46                   | INT_VAL
   47                   | CHAR_VAL
   48                   | BOOL_VAL
   49                   | KNULL

   50 unary_expression: primary_expression
   51                 | MINUS unary_expression
   52                 | NOT unary_expression
   53                 | ref_expression
   54                 | DEREF primary_expression

   55 ref_expression: REF assignment_val

   56 multiplicative_expression: unary_expression
   57                          | multiplicative_expression TIMES unary_expression
   58                          | multiplicative_expression DIV unary_expression

   59 additive_expression: multiplicative_expression
   60                    | additive_expression PLUS multiplicative_expression
   61                    | additive_expression MINUS multiplicative_expression

   62 relational_expression: additive_expression
   63                      | relational_expression EQ additive_expression
   64                      | relational_expression LT additive_expression
   65                      | relational_expression GT additive_expression
   66                      | relational_expression LEQ additive_expression
   67                      | relational_expression GEQ additive_expression
   68                      | relational_expression NEQ additive_expression

   69 and_expression: relational_expression
   70               | and_expression AND relational_expression

   71 expression: and_expression
   72           | expression OR and_expression

   73 decl_list: variable_decleration decl_list
   74          | ε

   75 stat_list: statement stat_list
   76          | ε

   77 code_block: decl_list stat_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BOOL (258) 12
    CHAR (259) 13
    INT (260) 14
    STR (261) 24
    INTPTR (262) 16
    CHARPTR (263) 15
    IF (264) 29 30
    ELSE (265) 30
    WHILE (266) 31
    VAR (267) 23
    PROC (268) 4
    RETURN (269) 4 22
    AND (270) 70
    REF (271) 55
    EQ (272) 63
    IS (273) 28 33 34
    DIV (274) 58
    LEQ (275) 66
    GEQ (276) 67
    GT (277) 65
    LT (278) 64
    MINUS (279) 51 61
    NEQ (280) 68
    NOT (281) 52
    OR (282) 72
    PLUS (283) 60
    TIMES (284) 57
    DEREF (285) 37 54
    SEMI (286) 7 22 23 28 33 34
    COLON (287) 9 23
    COMMA (288) 10 40
    ABS (289) 43
    BRACKO (290) 19 29 30 31 32
    BRACKC (291) 19 29 30 31 32
    PARENO (292) 4 28 29 30 31 42
    PARENC (293) 4 28 29 30 31 42
    SBRACKO (294) 24 25 26
    SBRACKC (295) 24 25 26
    BOOL_VAL <u_base_int> (296) 48
    INT_VAL <u_base_int> (297) 24 46
    CHAR_VAL <u_base_int> (298) 47
    STRING_VAL <u_base_charptr> (299) 34
    ID <u_base_charptr> (300) 4 10 11 25 26 28 35 37 44
    KNULL <u_base_charptr> (301) 49


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    Program <u_program> (48)
        on left: 1
        on right: 0
    Procedures <u_proc_list> (49)
        on left: 2 3
        on right: 1 2
    procedure_decleration <u_proc> (50)
        on left: 4
        on right: 2 20
    parameter_list <u_decl_list> (51)
        on left: 5 6
        on right: 4
    multi_type <u_decl_list> (52)
        on left: 7 8
        on right: 5 7
    parameter_decl <u_decl> (53)
        on left: 9
        on right: 5 7
    id_list <u_symname_list> (54)
        on left: 10 11
        on right: 9 10 23
    non_str_type <u_type> (55)
        on left: 12 13 14 15 16
        on right: 9 17
    type <u_type> (56)
        on left: 17 18
        on right: 4 23
    procedure_block <u_procedure_block> (57)
        on left: 19
        on right: 4
    proc_list <u_proc_list> (58)
        on left: 20 21
        on right: 19 20
    return_stmt <u_return_stat> (59)
        on left: 22
        on right: 19
    variable_decleration <u_decl> (60)
        on left: 23
        on right: 73
    string <u_type> (61)
        on left: 24
        on right: 18
    str_id_lhs <u_lhs> (62)
        on left: 25
        on right: 36
    str_id_expr <u_expr> (63)
        on left: 26
        on right: 45
    statement <u_stat> (64)
        on left: 27 28 29 30 31 32
        on right: 75
    assignment <u_stat> (65)
        on left: 33 34
        on right: 27
    assignment_val <u_lhs> (66)
        on left: 35 36 37
        on right: 28 33 34 55
    expr_list <u_expr_list> (67)
        on left: 38 39
        on right: 28
    multi_expr <u_expr_list> (68)
        on left: 40 41
        on right: 38 40
    primary_expression <u_expr> (69)
        on left: 42 43 44 45 46 47 48 49
        on right: 50 54
    unary_expression <u_expr> (70)
        on left: 50 51 52 53 54
        on right: 51 52 56 57 58
    ref_expression <u_expr> (71)
        on left: 55
        on right: 53
    multiplicative_expression <u_expr> (72)
        on left: 56 57 58
        on right: 57 58 59 60 61
    additive_expression <u_expr> (73)
        on left: 59 60 61
        on right: 60 61 62 63 64 65 66 67 68
    relational_expression <u_expr> (74)
        on left: 62 63 64 65 66 67 68
        on right: 63 64 65 66 67 68 69 70
    and_expression <u_expr> (75)
        on left: 69 70
        on right: 70 71 72
    expression <u_expr> (76)
        on left: 71 72
        on right: 22 25 26 29 30 31 33 38 40 42 43 72
    decl_list <u_decl_list> (77)
        on left: 73 74
        on right: 19 73 77
    stat_list <u_stat_list> (78)
        on left: 75 76
        on right: 19 75 77
    code_block <u_nested_block> (79)
        on left: 77
        on right: 29 30 31 32


State 0

    0 $accept: • Program $end

    $default  reduce using rule 3 (Procedures)

    Program     go to state 1
    Procedures  go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    1 Program: Procedures •
    2 Procedures: Procedures • procedure_decleration

    PROC  shift, and go to state 4

    $default  reduce using rule 1 (Program)

    procedure_decleration  go to state 5


State 3

    0 $accept: Program $end •

    $default  accept


State 4

    4 procedure_decleration: PROC • ID PARENO parameter_list PARENC RETURN type procedure_block

    ID  shift, and go to state 6


State 5

    2 Procedures: Procedures procedure_decleration •

    $default  reduce using rule 2 (Procedures)


State 6

    4 procedure_decleration: PROC ID • PARENO parameter_list PARENC RETURN type procedure_block

    PARENO  shift, and go to state 7


State 7

    4 procedure_decleration: PROC ID PARENO • parameter_list PARENC RETURN type procedure_block

    ID  shift, and go to state 8

    $default  reduce using rule 6 (parameter_list)

    parameter_list  go to state 9
    parameter_decl  go to state 10
    id_list         go to state 11


State 8

   10 id_list: ID • COMMA id_list
   11        | ID •

    COMMA  shift, and go to state 12

    $default  reduce using rule 11 (id_list)


State 9

    4 procedure_decleration: PROC ID PARENO parameter_list • PARENC RETURN type procedure_block

    PARENC  shift, and go to state 13


State 10

    5 parameter_list: parameter_decl • multi_type

    SEMI  shift, and go to state 14

    $default  reduce using rule 8 (multi_type)

    multi_type  go to state 15


State 11

    9 parameter_decl: id_list • COLON non_str_type

    COLON  shift, and go to state 16


State 12

   10 id_list: ID COMMA • id_list

    ID  shift, and go to state 8

    id_list  go to state 17


State 13

    4 procedure_decleration: PROC ID PARENO parameter_list PARENC • RETURN type procedure_block

    RETURN  shift, and go to state 18


State 14

    7 multi_type: SEMI • parameter_decl multi_type

    ID  shift, and go to state 8

    parameter_decl  go to state 19
    id_list         go to state 11


State 15

    5 parameter_list: parameter_decl multi_type •

    $default  reduce using rule 5 (parameter_list)


State 16

    9 parameter_decl: id_list COLON • non_str_type

    BOOL     shift, and go to state 20
    CHAR     shift, and go to state 21
    INT      shift, and go to state 22
    INTPTR   shift, and go to state 23
    CHARPTR  shift, and go to state 24

    non_str_type  go to state 25


State 17

   10 id_list: ID COMMA id_list •

    $default  reduce using rule 10 (id_list)


State 18

    4 procedure_decleration: PROC ID PARENO parameter_list PARENC RETURN • type procedure_block

    BOOL     shift, and go to state 20
    CHAR     shift, and go to state 21
    INT      shift, and go to state 22
    STR      shift, and go to state 26
    INTPTR   shift, and go to state 23
    CHARPTR  shift, and go to state 24

    non_str_type  go to state 27
    type          go to state 28
    string        go to state 29


State 19

    7 multi_type: SEMI parameter_decl • multi_type

    SEMI  shift, and go to state 14

    $default  reduce using rule 8 (multi_type)

    multi_type  go to state 30


State 20

   12 non_str_type: BOOL •

    $default  reduce using rule 12 (non_str_type)


State 21

   13 non_str_type: CHAR •

    $default  reduce using rule 13 (non_str_type)


State 22

   14 non_str_type: INT •

    $default  reduce using rule 14 (non_str_type)


State 23

   16 non_str_type: INTPTR •

    $default  reduce using rule 16 (non_str_type)


State 24

   15 non_str_type: CHARPTR •

    $default  reduce using rule 15 (non_str_type)


State 25

    9 parameter_decl: id_list COLON non_str_type •

    $default  reduce using rule 9 (parameter_decl)


State 26

   24 string: STR • SBRACKO INT_VAL SBRACKC

    SBRACKO  shift, and go to state 31


State 27

   17 type: non_str_type •

    $default  reduce using rule 17 (type)


State 28

    4 procedure_decleration: PROC ID PARENO parameter_list PARENC RETURN type • procedure_block

    BRACKO  shift, and go to state 32

    procedure_block  go to state 33


State 29

   18 type: string •

    $default  reduce using rule 18 (type)


State 30

    7 multi_type: SEMI parameter_decl multi_type •

    $default  reduce using rule 7 (multi_type)


State 31

   24 string: STR SBRACKO • INT_VAL SBRACKC

    INT_VAL  shift, and go to state 34


State 32

   19 procedure_block: BRACKO • proc_list decl_list stat_list return_stmt BRACKC

    PROC  shift, and go to state 4

    $default  reduce using rule 21 (proc_list)

    procedure_decleration  go to state 35
    proc_list              go to state 36


State 33

    4 procedure_decleration: PROC ID PARENO parameter_list PARENC RETURN type procedure_block •

    $default  reduce using rule 4 (procedure_decleration)


State 34

   24 string: STR SBRACKO INT_VAL • SBRACKC

    SBRACKC  shift, and go to state 37


State 35

   20 proc_list: procedure_decleration • proc_list

    PROC  shift, and go to state 4

    $default  reduce using rule 21 (proc_list)

    procedure_decleration  go to state 35
    proc_list              go to state 38


State 36

   19 procedure_block: BRACKO proc_list • decl_list stat_list return_stmt BRACKC

    VAR  shift, and go to state 39

    $default  reduce using rule 74 (decl_list)

    variable_decleration  go to state 40
    decl_list             go to state 41


State 37

   24 string: STR SBRACKO INT_VAL SBRACKC •

    $default  reduce using rule 24 (string)


State 38

   20 proc_list: procedure_decleration proc_list •

    $default  reduce using rule 20 (proc_list)


State 39

   23 variable_decleration: VAR • id_list COLON type SEMI

    ID  shift, and go to state 8

    id_list  go to state 42


State 40

   73 decl_list: variable_decleration • decl_list

    VAR  shift, and go to state 39

    $default  reduce using rule 74 (decl_list)

    variable_decleration  go to state 40
    decl_list             go to state 43


State 41

   19 procedure_block: BRACKO proc_list decl_list • stat_list return_stmt BRACKC

    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    DEREF   shift, and go to state 46
    BRACKO  shift, and go to state 47
    ID      shift, and go to state 48

    $default  reduce using rule 76 (stat_list)

    str_id_lhs      go to state 49
    statement       go to state 50
    assignment      go to state 51
    assignment_val  go to state 52
    stat_list       go to state 53


State 42

   23 variable_decleration: VAR id_list • COLON type SEMI

    COLON  shift, and go to state 54


State 43

   73 decl_list: variable_decleration decl_list •

    $default  reduce using rule 73 (decl_list)


State 44

   29 statement: IF • PARENO expression PARENC BRACKO code_block BRACKC
   30          | IF • PARENO expression PARENC BRACKO code_block BRACKC ELSE BRACKO code_block BRACKC

    PARENO  shift, and go to state 55


State 45

   31 statement: WHILE • PARENO expression PARENC BRACKO code_block BRACKC

    PARENO  shift, and go to state 56


State 46

   37 assignment_val: DEREF • ID

    ID  shift, and go to state 57


State 47

   32 statement: BRACKO • code_block BRACKC

    VAR  shift, and go to state 39

    $default  reduce using rule 74 (decl_list)

    variable_decleration  go to state 40
    decl_list             go to state 58
    code_block            go to state 59


State 48

   25 str_id_lhs: ID • SBRACKO expression SBRACKC
   35 assignment_val: ID •

    SBRACKO  shift, and go to state 60

    $default  reduce using rule 35 (assignment_val)


State 49

   36 assignment_val: str_id_lhs •

    $default  reduce using rule 36 (assignment_val)


State 50

   75 stat_list: statement • stat_list

    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    DEREF   shift, and go to state 46
    BRACKO  shift, and go to state 47
    ID      shift, and go to state 48

    $default  reduce using rule 76 (stat_list)

    str_id_lhs      go to state 49
    statement       go to state 50
    assignment      go to state 51
    assignment_val  go to state 52
    stat_list       go to state 61


State 51

   27 statement: assignment •

    $default  reduce using rule 27 (statement)


State 52

   28 statement: assignment_val • IS ID PARENO expr_list PARENC SEMI
   33 assignment: assignment_val • IS expression SEMI
   34           | assignment_val • IS STRING_VAL SEMI

    IS  shift, and go to state 62


State 53

   19 procedure_block: BRACKO proc_list decl_list stat_list • return_stmt BRACKC

    RETURN  shift, and go to state 63

    return_stmt  go to state 64


State 54

   23 variable_decleration: VAR id_list COLON • type SEMI

    BOOL     shift, and go to state 20
    CHAR     shift, and go to state 21
    INT      shift, and go to state 22
    STR      shift, and go to state 26
    INTPTR   shift, and go to state 23
    CHARPTR  shift, and go to state 24

    non_str_type  go to state 27
    type          go to state 65
    string        go to state 29


State 55

   29 statement: IF PARENO • expression PARENC BRACKO code_block BRACKC
   30          | IF PARENO • expression PARENC BRACKO code_block BRACKC ELSE BRACKO code_block BRACKC

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 85


State 56

   31 statement: WHILE PARENO • expression PARENC BRACKO code_block BRACKC

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 86


State 57

   37 assignment_val: DEREF ID •

    $default  reduce using rule 37 (assignment_val)


State 58

   77 code_block: decl_list • stat_list

    IF      shift, and go to state 44
    WHILE   shift, and go to state 45
    DEREF   shift, and go to state 46
    BRACKO  shift, and go to state 47
    ID      shift, and go to state 48

    $default  reduce using rule 76 (stat_list)

    str_id_lhs      go to state 49
    statement       go to state 50
    assignment      go to state 51
    assignment_val  go to state 52
    stat_list       go to state 87


State 59

   32 statement: BRACKO code_block • BRACKC

    BRACKC  shift, and go to state 88


State 60

   25 str_id_lhs: ID SBRACKO • expression SBRACKC

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 89


State 61

   75 stat_list: statement stat_list •

    $default  reduce using rule 75 (stat_list)


State 62

   28 statement: assignment_val IS • ID PARENO expr_list PARENC SEMI
   33 assignment: assignment_val IS • expression SEMI
   34           | assignment_val IS • STRING_VAL SEMI

    REF         shift, and go to state 66
    MINUS       shift, and go to state 67
    NOT         shift, and go to state 68
    DEREF       shift, and go to state 69
    ABS         shift, and go to state 70
    PARENO      shift, and go to state 71
    BOOL_VAL    shift, and go to state 72
    INT_VAL     shift, and go to state 73
    CHAR_VAL    shift, and go to state 74
    STRING_VAL  shift, and go to state 90
    ID          shift, and go to state 91
    KNULL       shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 92


State 63

   22 return_stmt: RETURN • expression SEMI

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 93


State 64

   19 procedure_block: BRACKO proc_list decl_list stat_list return_stmt • BRACKC

    BRACKC  shift, and go to state 94


State 65

   23 variable_decleration: VAR id_list COLON type • SEMI

    SEMI  shift, and go to state 95


State 66

   55 ref_expression: REF • assignment_val

    DEREF  shift, and go to state 46
    ID     shift, and go to state 48

    str_id_lhs      go to state 49
    assignment_val  go to state 96


State 67

   51 unary_expression: MINUS • unary_expression

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr         go to state 77
    primary_expression  go to state 78
    unary_expression    go to state 97
    ref_expression      go to state 80


State 68

   52 unary_expression: NOT • unary_expression

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr         go to state 77
    primary_expression  go to state 78
    unary_expression    go to state 98
    ref_expression      go to state 80


State 69

   54 unary_expression: DEREF • primary_expression

    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr         go to state 77
    primary_expression  go to state 99


State 70

   43 primary_expression: ABS • expression ABS

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 100


State 71

   42 primary_expression: PARENO • expression PARENC

    REF       shift, and go to state 66
    MINUS     shift, and go to state 67
    NOT       shift, and go to state 68
    DEREF     shift, and go to state 69
    ABS       shift, and go to state 70
    PARENO    shift, and go to state 71
    BOOL_VAL  shift, and go to state 72
    INT_VAL   shift, and go to state 73
    CHAR_VAL  shift, and go to state 74
    ID        shift, and go to state 75
    KNULL     shift, and go to state 76

    str_id_expr                go to state 77
    primary_expression         go to state 78
    unary_expression           go to state 79
    ref_expression             go to state 80
    multiplicative_expression  go to state 81
    additive_expression        go to state 82
    relational_expression      go to state 83
    and_expression             go to state 84
    expression                 go to state 101


State 72

   48 primary_expression: BOOL_VAL •

    $default  reduce using rule 48 (primary_expression)


State 73

   46 primary_expression: INT_VAL •

    $default  reduce using rule 46 (primary_expression)


State 74

   47 primary_expression: CHAR_VAL •

    $default  reduce using rule 47 (primary_expression)


State 75

   26 str_id_expr: ID • SBRACKO expression SBRACKC
   44 primary_expression: ID •

    SBRACKO  shift, and go to state 102

    $default  reduce using rule 44 (primary_expression)


State 76

   49 primary_expression: KNULL •

    $default  reduce using rule 49 (primary_expression)


State 77

   45 primary_expression: str_id_expr •

    $default  reduce using rule 45 (primary_expression)


State 78

   50 unary_expression: primary_expression •

    $default  reduce using rule 50 (unary_expression)


State 79

   56 multiplicative_expression: unary_expression •

    $default  reduce using rule 56 (multiplicative_expression)


State 80

   53 unary_expression: ref_expression •

    $default  reduce using rule 53 (unary_expression)


State 81

   57 multiplicative_expression: multiplicative_expression • TIMES unary_expression
   58                          | multiplicative_expression • DIV unary_expression
   59 additive_expression: multiplicative_expression •

    DIV    shift, and go to state 103
    TIMES  shift, and go to state 104

    $default  reduce using rule 59 (additive_expression)


State 82

   60 additive_expression: additive_expression • PLUS multiplicative_expression
   61                    | additive_expression • MINUS multiplicative_expression
   62 relational_expression: additive_expression •

    MINUS  shift, and go to state 105
    PLUS   shift, and go to state 106

    $default  reduce using rule 62 (relational_expression)


State 83

   63 relational_expression: relational_expression • EQ additive_expression
   64                      | relational_expression • LT additive_expression
   65                      | relational_expression • GT additive_expression
   66                      | relational_expression • LEQ additive_expression
   67                      | relational_expression • GEQ additive_expression
   68                      | relational_expression • NEQ additive_expression
   69 and_expression: relational_expression •

    EQ   shift, and go to state 107
    LEQ  shift, and go to state 108
    GEQ  shift, and go to state 109
    GT   shift, and go to state 110
    LT   shift, and go to state 111
    NEQ  shift, and go to state 112

    $default  reduce using rule 69 (and_expression)


State 84

   70 and_expression: and_expression • AND relational_expression
   71 expression: and_expression •

    AND  shift, and go to state 113

    $default  reduce using rule 71 (expression)


State 85
